// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The scene works as expected 1`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      false
    </button>
  </div>
</div>
`;

exports[`The scene works as expected 2`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      true
    </button>
  </div>
</div>
`;

exports[`The scene works as expected 3`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      false
    </button>
  </div>
</div>
`;
